<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_system"
        android:textSize="40sp"/>

    <ListView
        android:layout_marginTop="14dp"
        android:id="@+id/TransactionList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/addBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_book"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/yes" />

    <Button
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no" />



</LinearLayout>